--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <table class="tftable" border="1">
 <tr><th>TÜR</th><th>TARİH</th><th>BAŞLIK</th><th>iNDiR</th><th>KAPSAM</th></tr>
 
-<tr><td>PDF</td><td>KASIM 2000</td><td>ELEKTRİK KUVVETLİ AKIM TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/JANNAH The Garden from the Quran and Hadith.pdf" target="_blank">LiNK</a>
+<tr><td>PDF</td><td>KASIM 2000</td><td>ELEKTRİK KUVVETLİ AKIM TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/JANNAH The Garden from the Quran and Hadith.pdf" target="_blank">LiNK</a><a href="hy-ebook.github.io/Bibi/bibi/?book=JANNAH The Garden from the Quran and Hadith.epub" target="_blank">EK</a>
 </td><td>KUVVETLi AKIM</td></tr>
 
 <tr><td>PDF</td><td>ARALIK 2007</td><td>BİNALARIN YANGINDAN KORUNMASI HAKKINDA YÖNETMELİK</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/BİNALARIN-YANGINDAN-KORUNMASI-HAKKINDA-YÖNETMELİK.pdf" target="_blank">LiNK</a> <a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/20071219BİNALARIN-YANGINDAN-KORUNMASI-HAKKINDA-YÖNETMELİĞİN-EKLERİ.pdf" target="_blank">EK</a></td><td>YANGIN</td></tr>
