--- a/index.html
+++ b/index.html
@@ -18,39 +18,10 @@
 <table class="tftable" border="1">
 <tr><th>TÜR</th><th>TARİH</th><th>BAŞLIK</th><th>iNDiR</th><th>KAPSAM</th></tr>
 
-<tr><td>PDF</td><td>KASIM 2000</td><td>ELEKTRİK KUVVETLİ AKIM TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> <a href="hy-ebook.github.io/Bibi/bibi/?book=JANNAH The Garden from the Quran and Hadith.epub" target="_blank">ePub</a>
-</td><td>KUVVETLi AKIM</td></tr>
+<tr><td>ELEKTRİK KUVVETLİ AKIM TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> <a href="hy-ebook.github.io/Bibi/bibi/?book=JANNAH The Garden from the Quran and Hadith.epub" target="_blank">ePub</a>
+</td></tr>
 
-<tr><td>PDF</td><td>ARALIK 2007</td><td>BİNALARIN YANGINDAN KORUNMASI HAKKINDA YÖNETMELİK</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/BİNALARIN-YANGINDAN-KORUNMASI-HAKKINDA-YÖNETMELİK.pdf" target="_blank">LiNK</a> <a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/20071219BİNALARIN-YANGINDAN-KORUNMASI-HAKKINDA-YÖNETMELİĞİN-EKLERİ.pdf" target="_blank">EK</a></td><td>YANGIN</td></tr>
 
-<tr><td>PDF</td><td>KASIM 1984</td><td>ELEKTRİK İÇ TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/Elektrik-ic-tesisleri-yonetmeligi.pdf" target="_blank">LiNK</a></td><td>ELEKTRİK İÇ TESİSLERİ</td></tr>
-
-<tr><td>PDF</td><td>AĞUSTOS 2001</td><td>ELEKTRİK TESİSLERİNDE TOPRAKLAMALAR YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/ELEKTRİK-TESİSLERİNDE-TOPRAKLAMALAR-YÖNETMELİĞİ.pdf" target="_blank">LiNK</a></td><td>TOPRAKLAMALAR</td></tr>
-
-<tr><td>PDF</td><td>ŞUBAT 2008</td><td>YAPI DENETİMİ UYGULAMA YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/YAPI-DENETİMİ-UYGULAMA-YÖNETMELİĞİ.pdf" target="_blank">LiNK</a> 
-<a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/YAPI-DENETİM-EK.pdf" target="_blank">EK</a></td><td>YAPI DENETİM</td></tr>
-
-<tr><td>PDF</td><td>HAZİRAN 2016</td><td>ASANSÖR YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/ASANSÖR-YÖNETMELİĞİ-(2014⁄33⁄AB).pdf" target="_blank">LiNK</a> <a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/Asansör-Ek.pdf" target="_blank">EK</a></td><td>ASANSÖR</td></tr>
-
-<tr><td>PDF</td><td>ARALIK 2003</td><td>ELEKTRİK İÇ TESİSLERİ PROJE HAZIRLAMA YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/ELEKTRİK-İÇ-TESİSLERİ-PROJE-HAZIRLAMA-YÖNETMELİĞi.pdf" target="_blank">LiNK</a></td><td>PROJE HAZIRLAMA</td></tr>
-
-<tr><td>PDF</td><td>KASIM 2017</td><td>TEDAŞ DAĞITIM ŞEBEKELERİ ENERJİ KABLOLARI MONTAJ UYGULAMA USUL ve ESASLARI</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Dagitim_Sebekeleri_Enerji_Kablolari_Montaj (Uygulama)_Usul_ve_Esasları.pdf" target="_blank">LiNK</a></td><td>ENERJİ KABLOLARI</td></tr>
-
-<tr><td>PDF</td><td>EmoAnkara 2012</td><td>ELEKTRİK TESİSLERİ GENEL TEKNİK ŞARTNAMESİ ve UYGULAMA ESASLARI</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/ELEKTRiK_TESiSLERi_GENEL_TEKNiK_SARTNAMESi_ve_UYGULAMA_ESASLARI.pdf" target="_blank">LiNK</a></td><td>ELEKTRİK TESİSLERİ ŞARTNAME</td></tr>
-
-<tr><td>PDF</td><td>MAYIS 2018</td><td>BİNA İÇİ ELEKTRONİK HABERLEŞME TESİSATI TEKNİK ŞARTNAMESİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/bina-ici-elektronik-haberlesme-tesisati-teknik-sartnamesi.pdf" target="_blank">LiNK</a></td><td>ELEKTRONİK HABERLEŞME</td></tr>
-
-<tr><td>PDF</td><td>NİSAN 2006</td><td>KABLO BACASI VE ENERJİ ODASININ ÖLÇÜ VE DETAYLARI İLE UYGULAMA ALANLARINA İLİŞKİN ESASLAR</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Kablo_Bacasi_ve_Enerji_Odasinin_Olçu_ve_Detaylari_ile_Uygulama_Esasları.pdf" target="_blank">LiNK</a></td><td>KABLO BACASI ENERJİ ODASI</td></tr>
-
-<tr><td>PDF</td><td>EMOANKARA 2011</td><td>İLETKENLERİN BOYUTLANDIRILMASI</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/iletkenlerin_boyutlandirilmasi.pdf" target="_blank">LiNK</a></td><td>İLETKENLER</td></tr>
-
-<tr><td>PDF</td><td>TEDAŞ 2018</td><td>LİSANSSIZ ELEKTRİK ÜRETİM YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/pdf/LISANSSIZ.pdf" target="_blank">LiNK</a></td><td>GÜNEŞ ENERJİSİ ELEKTRİK ÜRETİMİ</td></tr>
-
-<tr><td>PDF</td><td>TEDAŞ 2018</td><td>YILDIRIMDAN KORUNMA YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/Yıldırımdan-Korunma-Yönetmeliği.pdf" target="_blank">LiNK</a></td><td>YILDIRIM</td></tr>
-
-<tr><td>PDF</td><td>TEDAŞ 2020</td><td>ELEKTRİK PROJESİ KONTROL FORMU</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Kontrol-Formu/ELEKTRİK-PROJESİ-KONTROL-FORMU.pdf" target="_blank">LiNK</a></td><td>KONTROL FORMU</td></tr>
-
-<tr><td>PDF</td><td>İZMBEL 2020</td><td>İZMİR BELEDİYESİ YÜKSEK YAPI YÖNETMELİĞİ</td><td><a href="https://vdemir.github.io/viewer/web/viewer.html?file=https://vdemir.github.io/assets/Mevzuat/Yonetmelikler/Yüksek-Yapı-Yönetmeliği.pdf" target="_blank">LiNK</a></td><td>YÜKSEK YAPI</td></tr>
 </table></main>
     <footer></footer>
   </body>
