--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header></header>
     <main>
 <table class="tftable" border="1">
-<tr><th>TÜR</th><th>TARİH</th><th>BAŞLIK</th><th>iNDiR</th><th>KAPSAM</th></tr>
+<tr><th>BAŞLIK</th><th>iNDiR</th></tr>
 
 <tr><td>ELEKTRİK KUVVETLİ AKIM TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> <a href="hy-ebook.github.io/Bibi/bibi/?book=JANNAH The Garden from the Quran and Hadith.epub" target="_blank">ePub</a>
 </td></tr>
