--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header></header>
     <main>
 <table class="tftable" border="1">
-<tr><th>BAŞLIK</th><th>iNDiR</th></tr>
+<tr><th>No</th><th>Published Date</th><th>Headline</th><th>PDF Reader</th><th>ePub Reader</th></tr>
 
-<tr><td>ELEKTRİK KUVVETLİ AKIM TESİSLERİ YÖNETMELİĞİ</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> <a href="hy-ebook.github.io/Bibi/bibi/?book=JANNAH The Garden from the Quran and Hadith.epub" target="_blank">ePub</a>
-</td></tr>
+<tr><td>1</td><td>2000</td><td>JANNAH:The Garden from theQur’an and Hadith</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> <a href="hy-ebook.github.io/Bibi/bibi/?book=JANNAH The Garden from the Quran and Hadith.epub" target="_blank">ePub</a>
+</td><td>JANNAH</td></tr>
 
 
 </table></main>
