--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header></header>
     <main>
 <table class="tftable" border="1">
-<tr><th>No</th><th>Published Date</th><th>Headline</th><th>PDF Reader</th><th>ePub Reader</th></tr>
+<tr><th>No</th><th>Headline</th><th>PDF Reader</th><th>ePub Reader</th></tr>
 
 <tr><td>1</td><td>JANNAH:The Garden from the Qur’an and Hadith</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=1.epub" target="_blank">ePub</a></td></tr>
