--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <tr><td>9</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/9.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=9.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>10</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/10.pdf" target="_blank">PDF</a> 
+<tr><td>10</td><td>UNAWARENESS: A SLY THREAT</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/10.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=11.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>11</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/11.pdf" target="_blank">PDF</a> 
+<tr><td>11</td><td>THE WORSTSLANDER:IDOLATRY</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/11.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=12.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>12</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/12.pdf" target="_blank">PDF</a> 
