--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 <tr><td>20</td><td>The Lightof the Qur’an has Destroyed Satanism</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/20.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=21.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>21</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/21.pdf" target="_blank">PDF</a> 
+<tr><td>21</td><td>THE LITTLE MAN INTHE TOWER</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/21.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=22.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>22</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/22.pdf" target="_blank">PDF</a> 
+<tr><td>22</td><td>THE HUMAN MIRACLE</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/22.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=23.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>23</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/23.pdf" target="_blank">PDF</a> 
+<tr><td>23</td><td>THE EVOLUTION IMPASSE I</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/23.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=24.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>24</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/24.pdf" target="_blank">PDF</a> 
