--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 <tr><td>23</td><td>THE EVOLUTION IMPASSE I</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/23.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=24.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>24</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/24.pdf" target="_blank">PDF</a> 
+<tr><td>24</td><td>THE EVOLUTION IMPASSE 2</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/24.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=25.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>25</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/25.pdf" target="_blank">PDF</a> 
+<tr><td>25</td><td>THE DANGER OF A COMMUNIST KURDISTAN</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/25.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=26.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>26</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/26.pdf" target="_blank">PDF</a> 
