--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <tr><td>25</td><td>THE DANGER OF A COMMUNIST KURDISTAN</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/25.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=26.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>26</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/26.pdf" target="_blank">PDF</a> 
+<tr><td>26</td><td>The Cambrian Evidence That Darwin Failed to Comprehend</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/26.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=27.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>27</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/27.pdf" target="_blank">PDF</a> 
