--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
 <tr><td>26</td><td>The Cambrian Evidence That Darwin Failed to Comprehend</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/26.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=27.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>27</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/27.pdf" target="_blank">PDF</a> 
+<tr><td>27</td><td>PLEASANT WORDS FROM THE GOSPEL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/27.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=28.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>28</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/28.pdf" target="_blank">PDF</a> 
+<tr><td>28</td><td>PHOTOSYNTHESIS:THE GREEN MIRACLE</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/28.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=29.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>29</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/29.pdf" target="_blank">PDF</a> 
+<tr><td>29</td><td>MIRACLES WITHIN THE MOLECULE</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/29.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=30.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>30</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/30.pdf" target="_blank">PDF</a> 
