--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 <tr><td>29</td><td>MIRACLES WITHIN THE MOLECULE</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/29.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=30.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>30</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/30.pdf" target="_blank">PDF</a> 
+<tr><td>30</td><td>LOVE IN THE GOSPEL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/30.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=31.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>32</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/32.pdf" target="_blank">PDF</a> 
+<tr><td>32</td><td>Is Rumism A Threat?</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/32.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=33.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>33</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/33.pdf" target="_blank">PDF</a> 
