--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@
 <tr><td>32</td><td>Is Rumism A Threat?</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/32.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=33.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>33</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/33.pdf" target="_blank">PDF</a> 
+<tr><td>33</td><td>ISLAM and FAR EASTERN RELIGIONS</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/33.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=34.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>34</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/34.pdf" target="_blank">PDF</a> 
+<tr><td>34</td><td>ISLAM and FAR EASTERN RELIGIONS</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/34.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=35.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>35</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/35.pdf" target="_blank">PDF</a> 
+<tr><td>35</td><td>IN THE NAME OF ALLAH, THE ALL-MERCIFULAND MOST MERCIFUL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/35.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=36.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>36</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/36.pdf" target="_blank">PDF</a> 
+<tr><td>36</td><td>IF DARWIN HAD KNOWN ABOUT DNA</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/36.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=37.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>37</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
+<tr><td>37</td><td>Hazrat Mahdi (pbuh) is a Descendant of theProphet Abraham (pbuh)</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=38.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>38</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/38.pdf" target="_blank">PDF</a> 
