--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 <tr><td>37</td><td>Hazrat Mahdi (pbuh) is a Descendant of theProphet Abraham (pbuh)</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=38.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>38</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/38.pdf" target="_blank">PDF</a> 
+<tr><td>38</td><td>GLOBAL IMPACT OFTHE WORKS OF HARUN YAHYA VOL. 2</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/38.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=39.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>39</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/39.pdf" target="_blank">PDF</a> 
+<tr><td>39</td><td>DARWIN’S DILEMMA:THE SOUL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/39.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=40.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>40</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/40.pdf" target="_blank">PDF</a> 
+<tr><td>40</td><td>DARWINIST PROPAGANDA TECHNIQUES</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/40.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=41.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>41</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/41.pdf" target="_blank">PDF</a> 
