--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <tr><td>36</td><td>IF DARWIN HAD KNOWN ABOUT DNA</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/36.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=37.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>37</td><td>Hazrat Mahdi (pbuh) is a Descendant of theProphet Abraham (pbuh)</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
+<tr><td>37</td><td>Hazrat Mahdi (pbuh) is a Descendant of the Prophet Abraham (pbuh)</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=38.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>38</td><td>GLOBAL IMPACT OFTHE WORKS OF HARUN YAHYA VOL. 2</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/38.pdf" target="_blank">PDF</a> 
@@ -135,10 +135,10 @@
 <tr><td>40</td><td>DARWINIST PROPAGANDA TECHNIQUES</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/40.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=41.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>41</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/41.pdf" target="_blank">PDF</a> 
+<tr><td>41</td><td>CONFESSIONS OF THE EVOLUTIONISTS</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/41.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=42.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>42</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/42.pdf" target="_blank">PDF</a> 
+<tr><td>42</td><td>COMMUNICATION AND ARGUMENT IN THE QUR’AN</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/42.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=43.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>44</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/44.pdf" target="_blank">PDF</a> 
