--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 <tr><td>42</td><td>COMMUNICATION AND ARGUMENT IN THE QUR’AN</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/42.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=43.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>44</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/44.pdf" target="_blank">PDF</a> 
+<tr><td>44</td><td>ATLAS OF CREATION VOL - 4</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/44.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=45.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>45</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/45.pdf" target="_blank">PDF</a> 
+<tr><td>45</td><td>AMERICA’S FAILURE TO PERCEIVE THE PKK</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/45.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=46.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>46</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/46.pdf" target="_blank">PDF</a> 
+<tr><td>46</td><td>ALLAH’S ART OF DETAIL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/46.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=47.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>47</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/47.pdf" target="_blank">PDF</a> 
