--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
 <tr><td>46</td><td>ALLAH’S ART OF DETAIL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/46.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=47.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>47</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/47.pdf" target="_blank">PDF</a> 
+<tr><td>47</td><td>A HELPING HAND FOR REFUGEES</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/47.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=48.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>48</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/48.pdf" target="_blank">PDF</a> 
+<tr><td>48</td><td>A CALL FOR UNITIY</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/48.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=49.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>49</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/49.pdf" target="_blank">PDF</a> 
+<tr><td>49</td><td>2nd International Conference on the Origin of Life and the Universe</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/49.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=50.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>50</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/50.pdf" target="_blank">PDF</a> 
