--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <tr><td>49</td><td>2nd International Conference on the Origin of Life and the Universe</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/49.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=50.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>50</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/50.pdf" target="_blank">PDF</a> 
+<tr><td>50</td><td>Miracles of the Qur’an</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/50.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=51.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>51</td><td>UNCLE DARWIN, WE HAVEN’T CHANGED</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/51.pdf" target="_blank">PDF</a> 
