--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <tr><td>34</td><td>IN THE NAME OF ALLAH, THE ALL-MERCIFULAND MOST MERCIFUL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/34.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=35.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>35</td><td>IN THE NAME OF ALLAH, THE ALL-MERCIFULAND MOST MERCIFUL</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/35.pdf" target="_blank">PDF</a> 
+<tr><td>35</td><td>F DARWIN HADKNOWN ABOUT DNA</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/35.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=36.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>36</td><td>IF DARWIN HAD KNOWN ABOUT DNA</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/36.pdf" target="_blank">PDF</a> 
