--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <tr><td>35</td><td>IF DARWIN HADKNOWN ABOUT DNA</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/35.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=36.epub" target="_blank">ePub</a></td></tr>
 
-<tr><td>36</td><td>Hazrat Mahdi (pbuh) is a Descendant of the Prophet Abraham (pbuh)</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
+<tr><td>36</td><td>Hazrat Mahdi (pbuh) inthe Qur'an, the Torah,the Psalms and the Gospel</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/37.pdf" target="_blank">PDF</a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=38.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>37</td><td>GLOBAL IMPACT OFTHE WORKS OF HARUN YAHYA VOL. 2</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/38.pdf" target="_blank">PDF</a> 
