--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ function searchTable2() {
 
 
 </table></main>
+<script src="/js/x-return-top.min.js"></script>
     <footer></footer>
   </body>
 </html>
