--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@ function searchTable2() {
 
 </table></main>
 <script src="/js/x-return-top.min.js"></script>
-    <footer><a href="https://info.flagcounter.com/RGVk"><img src="https://s11.flagcounter.com/count2/RGVk/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a></footer>
+    <footer>
+    <a href="https://info.flagcounter.com/RGVk"><img src="https://s11.flagcounter.com/count2/RGVk/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+    
+    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=ef2d14f1d43342603fa631be4787adf6ac4c4aac'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/702667/t/3"></script>
+    </footer>
   </body>
 </html>
