--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ function searchTable2() {
 </table></main>
 
 
-<script src="/js/x-return-top.min.js"></script>
+<script src="https://hy-ebook.github.io/js/x-return-top.min.js"></script>
 
     <footer> 
     
