--- a/index.html
+++ b/index.html
@@ -7,33 +7,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <style type="text/css">
-.tftable {font-size:14px;color:#333333;width:70%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;margin-left: auto;margin-right: auto;}
-.tftable th {font-size:13px;background-color:#acc8cc;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;text-align:left;}
+.tftable {font-size:15px;color:#333333;width:70%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;margin-left: auto;margin-right: auto;}
+.tftable th {font-size:14px;background-color:#acc8cc;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;text-align:left;}
 .tftable tr {background-color:#d4e3e5;}
-.tftable td {font-size:14px;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;}
+.tftable td {font-size:15px;border-width: 1px;padding: 9px;border-style: solid;border-color: #729ea5;}
 .tftable tr:hover {background-color:#ffffff;}
 </style>
 
 <style>
 $layout-max-width: 720px;
-$font-bound-min:   320px; // will override defaults
-$font-bound-max:   720px; // will override defaults
+$font-bound-min:   320px; 
+$font-bound-max:   720px; 
 
 
-// ==============================
-// Font size mixin
-// ==============================
-
-//  default font scale bounding
 $font-lock-min:  400px !default; 
 $font-lock-max: 1000px !default;
 
-//  font-size 
 @mixin font-size(
-  $min,                         // font-size 
-  $max: null,                   // optional maximum font size
-  $lock-min: $font-lock-min,  // optional minimum viewport width 
-  $lock-max: $font-lock-max   // optional maximum viewport width 
+  $min,                       
+  $max: null,                  
+  $lock-min: $font-lock-min,  
+  $lock-max: $font-lock-max  
   ){
     & { font-size: $min; }
     @if $max {
@@ -52,15 +46,10 @@ $font-lock-max: 1000px !default;
       }
     }
 }
-
-//  strip units helper function
 @function num($input){  @return $input/($input * 0 + 1); }
 
 
 
-// ==============================
-// Usage
-// ==============================
 @import url('https://fonts.googleapis.com/css?family=PT+Serif|Rubik:900');
 html { box-sizing: border-box; }
 *,*:before,*:after { box-sizing: inherit; }
@@ -68,9 +57,6 @@ body { margin:0; padding:1rem; }
 * { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 article { max-width: $layout-max-width; margin: 0 auto; }
 
-//
-//  set default scaling
-//
 :root { @include font-size(16px, 24px); }
 
 h1 { 
