--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
   <body>
 <header>
 <div class="topnav" id="myTopnav">
-  <a href="www.harun-yahya.net" class="active">Harun Yahya</a>
+  <a href=" " class="active">Harun Yahya</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
