--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ function myFunction() {
 }
 </script></header>
     <main>
-    
+<script>    
+var siteWidth = 1280;
+var scale = screen.width /siteWidth
+
+document.querySelector('meta[name="viewport"]').setAttribute('content', 'width='+siteWidth+', initial-scale='+scale+'');</script>
 
 <script>
 function searchTable2() {
