--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 .tftable tr:hover {background-color:#ffffff;}
 </style>
 
-<style>/*
+<style>
+/*
 	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
 	*/
 	@media
@@ -33,8 +34,10 @@
 			top: -9999px;
 			left: -9999px;
 		}
-</style>
+		}
+		</style>
 
+		
 <style>
 body {
   margin: 0;
@@ -116,7 +119,9 @@ function myFunction() {
     x.className = "topnav";
   }
 }
-</script></header>
+</script>
+
+</header>
     <main>
 <script>    
 var siteWidth = 1280;
