--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ function searchTable2() {
 <table class="tftable" id='myTable'>
 <tr><th>No</th><th>Headline</th><th>PDF Reader</th><th>ePub Reader</th></tr>
 
-<tr><td>1</td><td>JANNAH:The Garden from the Qur’an and Hadith</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank">PDF</a> 
+<tr><td>1</td><td>JANNAH:The Garden from the Qur’an and Hadith</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/1.pdf" target="_blank"><img src="/asset/images/pdf.png" alt="PDF 16x16 icon"></a> 
 </td><td><a href="hy-ebook.github.io/Bibi/bibi/?book=33.epub" target="_blank">ePub</a></td></tr>
 
 <tr><td>2</td><td>WHAT KIND OF YEMEN?</td><td><a href="https://hy-ebook.github.io/viewer/web/viewer.html?file=https://hy-ebook.github.io/pdf/2.pdf" target="_blank">PDF</a> 
