--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@ function myFunction() {
 </script>
 
 <div class="tftable">
-<input id='myInput' onkeyup='searchTable2()' type='text' placeholder="Search">
+
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 </div>   
     
 <br> 
